--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -29,8 +29,7 @@ github_username:  raginmari
 
 # Build settings
 theme: minima
-plugins:
-  - jekyll-feed
+plugins: []
 
 # Exclude from processing.
 # The following items will not be processed, by default.
