--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,12 +19,11 @@
 # in the templates via {{ site.myvariable }}.
 
 title: S.E.A.F. Democratic Companion Support
-#email: info@example.com
+email: app-support@reimartwelker.de
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the support page of the "S.E.A.F. Democratic Companion" mobile app. 
-  It contains legal information, a public change log and the project roadmap."
-baseurl: "/docs" # the subpath of your site, e.g. /blog
-url: "https://dev.reimartwelker.de/helldivers-dc-support/" # the base hostname & protocol for your site, e.g. http://example.com
+  The support page of the "S.E.A.F. Democratic Companion" mobile app. You'll find information regarding data privacy, open source libraries used by the app and the project roadmap."
+baseurl: "/docs"
+url: "https://dev.reimartwelker.de/helldivers-dc-support"
 github_username:  raginmari
 
 # Build settings
