--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ title: S.E.A.F. Democratic Companion Support
 email: app-support@reimartwelker.de
 description: >- # this means to ignore newlines until "baseurl:"
   The support page of the "S.E.A.F. Democratic Companion" mobile app. You'll find information regarding data privacy, open source libraries used by the app and the project roadmap."
-baseurl: "/docs"
+baseurl: "/"
 url: "https://github.com/raginmari/helldivers-companion-support/blob/website"
 github_username:  raginmari
 
